@@ -23,6 +23,8 @@ Fixes:
    Reported by Minion. [MG]
  * The command parser incorrectly expanded the names of disabled built-in
    commands prior to $-command matching. Reported by Mercutio. [MG]
+ * benchmark()'s average would be thrown off when the CPU limit was 
+   exceeded during evaluation. Reported by Amberyl. [MG]
 
 
 Version 1.8.4 patchlevel 0                                 May 09,  2010
